# rebuscada

./: .env.example  .gitignore  Makefile  README.md  ai.py  check_pos.py  diccionari.py  diccionari_full.py  fast_ai.py  generate.py  generateLLM.py  info.py  proximitat.py  proximitatOpenAI.py  proximitatSOTA.py  pyproject.toml  requirements.txt  server.py  server_admin.py  stats.py
.agents/: AGENTS.md
.agents/skills/: catalan-style-referencia.md  catalan-style.md
.github/workflows/: ci.yml
admin/: admin.css  admin.js  index.html
scripts/: build_definitions.py  cerca_per_categoria.py  clean_txt.py  convert_dict_json.py  exclude_from_dict.py  extract_diec2_def.py  extract_wiktionary_def.py  generate_advanced.py  generate_diec2_helper_test.py  reorder_test_words.py  restore_backups.py  sort_by_freq.py  test_openai.py  update_rankings.py
tests/: conftest.py  test_diccionari.py  test_server.py  test_server_admin.py  test_stats.py
