[project]
name = "rebuscada"
version = "1.0.0"
description = "Joc de paraules en català basat en similitud semàntica"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E722",  # bare except (used in legacy code)
    "F401",  # unused imports (some are re-exports)
]

[tool.ruff.lint.isort]
known-first-party = ["diccionari", "diccionari_full", "stats", "proximitat", "fast_ai"]
